# ai-ss-lvshu-2026

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  entities.py
backend/app/providers/: base.py
backend/app/providers/amap/: __init__.py  provider.py
backend/app/reports/: base.py  standard.py
backend/app/schemas/: __init__.py  evaluations.py
backend/app/scoring/: base.py  default.yaml  rule_based.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_m15_research_enhancements.py  0003_poi_enrichments.py
backend/tests/: conftest.py  test_amap.py  test_api.py  test_debug.py  test_m15.py  test_m2a_poi_csv.py
deploy/: backend.env.example  frontend-runtime.example.json  frontend.env.example  nginx-direct.conf  nginx.conf
deploy/systemd/: esports-site-selection.service
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  DEPLOYMENT.md  PRODUCT.md  ROADMAP.md  SCORING_MODEL.md
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  runtimeConfig.ts
frontend/src/api/: client.ts
frontend/src/components/: MapPanel.tsx
frontend/src/pages/: History.tsx  NewEvaluation.tsx  Report.tsx  SystemConfig.tsx
frontend/src/styles/: app.css
scripts/: backup-db.sh  bootstrap-ubuntu-direct.sh  check-amap-geocode.sh  configure-secrets.sh  deploy.sh  health-check.sh  view-logs.sh
(+3 files in other folders)
