[project]
name = "esports-site-selection-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12", "uvicorn[standard]==0.34.2", "sqlalchemy==2.0.40",
  "alembic==1.15.2", "psycopg[binary]==3.2.6",
  "httpx==0.28.1", "PyYAML==6.0.2"
]
[project.optional-dependencies]
test = ["pytest==8.3.5"]
[tool.setuptools]
packages = ["app"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
